lab2/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> <empty>
Rule 3     instructions_opt -> instructions
Rule 4     instructions -> instruction instructions
Rule 5     instructions -> instruction
Rule 6     instruction -> FOR var = range instruction
Rule 7     instruction -> WHILE ( condition ) instruction
Rule 8     instruction -> IF ( condition ) instruction ELSE instruction  [precedence=nonassoc, level=2]
Rule 9     instruction -> IF ( condition ) instruction  [precedence=nonassoc, level=1]
Rule 10    instruction -> { instructions }
Rule 11    instruction -> statement ;
Rule 12    instruction -> assignment ;
Rule 13    range -> expression : expression
Rule 14    condition -> expression > expression  [precedence=nonassoc, level=4]
Rule 15    condition -> expression < expression  [precedence=nonassoc, level=4]
Rule 16    condition -> expression GREATER_EQUAL expression  [precedence=nonassoc, level=4]
Rule 17    condition -> expression LESS_EQUAL expression  [precedence=nonassoc, level=4]
Rule 18    condition -> expression NOT_EQUAL expression  [precedence=nonassoc, level=4]
Rule 19    condition -> expression EQUAL expression  [precedence=nonassoc, level=4]
Rule 20    assignment_op -> =
Rule 21    assignment_op -> ADDASSIGN  [precedence=right, level=3]
Rule 22    assignment_op -> SUBASSIGN  [precedence=right, level=3]
Rule 23    assignment_op -> DIVASSIGN  [precedence=right, level=3]
Rule 24    assignment_op -> MULASSIGN  [precedence=right, level=3]
Rule 25    assignment -> vector_element assignment_op expression
Rule 26    assignment -> matrix_element assignment_op expression
Rule 27    assignment -> var assignment_op expression
Rule 28    matrix_function -> matrix_function_name ( INTNUM )
Rule 29    matrix_function_name -> ZEROS
Rule 30    matrix_function_name -> ONES
Rule 31    matrix_function_name -> EYE
Rule 32    matrix -> [ vectors ]
Rule 33    vectors -> vector
Rule 34    vectors -> vectors , vector
Rule 35    vector -> [ variables ]
Rule 36    variables -> variable
Rule 37    variables -> variables , variable
Rule 38    variable -> element
Rule 39    variable -> var
Rule 40    variable -> number
Rule 41    element -> matrix_element
Rule 42    element -> vector_element
Rule 43    vector_element -> ID [ INTNUM ]
Rule 44    matrix_element -> ID [ INTNUM , INTNUM ]
Rule 45    var -> ID
Rule 46    number -> FLOAT
Rule 47    number -> INTNUM
Rule 48    string -> STRING
Rule 49    expression -> vector_element
Rule 50    expression -> matrix_element
Rule 51    expression -> transposition
Rule 52    expression -> uminus
Rule 53    expression -> matrix_function
Rule 54    expression -> matrix
Rule 55    expression -> num_expression
Rule 56    expression -> expression DOTDIV expression  [precedence=left, level=8]
Rule 57    expression -> expression DOTMUL expression  [precedence=left, level=8]
Rule 58    expression -> expression DOTSUB expression  [precedence=left, level=6]
Rule 59    expression -> expression DOTADD expression  [precedence=left, level=6]
Rule 60    expression -> expression / expression  [precedence=left, level=7]
Rule 61    expression -> expression * expression  [precedence=left, level=7]
Rule 62    expression -> expression - expression  [precedence=left, level=5]
Rule 63    expression -> expression + expression  [precedence=left, level=5]
Rule 64    num_expression -> var
Rule 65    num_expression -> number
Rule 66    uminus -> - expression  [precedence=right, level=9]
Rule 67    transposition -> expression '  [precedence=left, level=10]
Rule 68    statement -> PRINT print_vals
Rule 69    statement -> RETURN expression
Rule 70    statement -> CONTINUE
Rule 71    statement -> BREAK
Rule 72    print_vals -> print_val
Rule 73    print_vals -> print_vals , print_val
Rule 74    print_val -> expression
Rule 75    print_val -> string

Terminals, with rules where they appear:

'                    : 67
(                    : 7 8 9 28
)                    : 7 8 9 28
*                    : 61
+                    : 63
,                    : 34 37 44 73
-                    : 62 66
/                    : 60
:                    : 13
;                    : 11 12
<                    : 15
=                    : 6 20
>                    : 14
ADDASSIGN            : 21
BREAK                : 71
CONTINUE             : 70
DIVASSIGN            : 23
DOTADD               : 59
DOTDIV               : 56
DOTMUL               : 57
DOTSUB               : 58
ELSE                 : 8
EQUAL                : 19
EYE                  : 31
FLOAT                : 46
FOR                  : 6
GREATER_EQUAL        : 16
ID                   : 43 44 45
IF                   : 8 9
INTNUM               : 28 43 44 44 47
LESS_EQUAL           : 17
MULASSIGN            : 24
NOT_EQUAL            : 18
ONES                 : 30
PRINT                : 68
RETURN               : 69
STRING               : 48
SUBASSIGN            : 22
WHILE                : 7
ZEROS                : 29
[                    : 32 35 43 44
]                    : 32 35 43 44
error                : 
{                    : 10
}                    : 10

Nonterminals, with rules where they appear:

assignment           : 12
assignment_op        : 25 26 27
condition            : 7 8 9
element              : 38
expression           : 13 13 14 14 15 15 16 16 17 17 18 18 19 19 25 26 27 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 66 67 69 74
instruction          : 4 5 6 7 8 8 9
instructions         : 3 4 10
instructions_opt     : 1
matrix               : 54
matrix_element       : 26 41 50
matrix_function      : 53
matrix_function_name : 28
num_expression       : 55
number               : 40 65
print_val            : 72 73
print_vals           : 68 73
program              : 0
range                : 6
statement            : 11
string               : 75
transposition        : 51
uminus               : 52
var                  : 6 27 39 64
variable             : 36 37
variables            : 35 37
vector               : 33 34
vector_element       : 25 42 49
vectors              : 32 34


state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> .
    (3) instructions_opt -> . instructions
    (4) instructions -> . instruction instructions
    (5) instructions -> . instruction
    (6) instruction -> . FOR var = range instruction
    (7) instruction -> . WHILE ( condition ) instruction
    (8) instruction -> . IF ( condition ) instruction ELSE instruction
    (9) instruction -> . IF ( condition ) instruction
    (10) instruction -> . { instructions }
    (11) instruction -> . statement ;
    (12) instruction -> . assignment ;
    (68) statement -> . PRINT print_vals
    (69) statement -> . RETURN expression
    (70) statement -> . CONTINUE
    (71) statement -> . BREAK
    (25) assignment -> . vector_element assignment_op expression
    (26) assignment -> . matrix_element assignment_op expression
    (27) assignment -> . var assignment_op expression
    (43) vector_element -> . ID [ INTNUM ]
    (44) matrix_element -> . ID [ INTNUM , INTNUM ]
    (45) var -> . ID
    $end            reduce using rule 2 (instructions_opt -> .)
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    {               shift and go to state 9
    PRINT           shift and go to state 12
    RETURN          shift and go to state 13
    CONTINUE        shift and go to state 14
    BREAK           shift and go to state 15
    ID              shift and go to state 18

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    var                            shift and go to state 6
    statement                      shift and go to state 10
    assignment                     shift and go to state 11
    vector_element                 shift and go to state 16
    matrix_element                 shift and go to state 17

state 1

    (0) S' -> program .


state 2

    (1) program -> instructions_opt .
    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (3) instructions_opt -> instructions .
    $end            reduce using rule 3 (instructions_opt -> instructions .)


state 4

    (4) instructions -> instruction . instructions
    (5) instructions -> instruction .
    (4) instructions -> . instruction instructions
    (5) instructions -> . instruction
    (6) instruction -> . FOR var = range instruction
    (7) instruction -> . WHILE ( condition ) instruction
    (8) instruction -> . IF ( condition ) instruction ELSE instruction
    (9) instruction -> . IF ( condition ) instruction
    (10) instruction -> . { instructions }
    (11) instruction -> . statement ;
    (12) instruction -> . assignment ;
    (68) statement -> . PRINT print_vals
    (69) statement -> . RETURN expression
    (70) statement -> . CONTINUE
    (71) statement -> . BREAK
    (25) assignment -> . vector_element assignment_op expression
    (26) assignment -> . matrix_element assignment_op expression
    (27) assignment -> . var assignment_op expression
    (43) vector_element -> . ID [ INTNUM ]
    (44) matrix_element -> . ID [ INTNUM , INTNUM ]
    (45) var -> . ID
    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    {               shift and go to state 9
    PRINT           shift and go to state 12
    RETURN          shift and go to state 13
    CONTINUE        shift and go to state 14
    BREAK           shift and go to state 15
    ID              shift and go to state 18

    instruction                    shift and go to state 4
    instructions                   shift and go to state 19
    var                            shift and go to state 6
    statement                      shift and go to state 10
    assignment                     shift and go to state 11
    vector_element                 shift and go to state 16
    matrix_element                 shift and go to state 17

state 5

    (6) instruction -> FOR . var = range instruction
    (45) var -> . ID
    ID              shift and go to state 21

    var                            shift and go to state 20

state 6

    (27) assignment -> var . assignment_op expression
    (20) assignment_op -> . =
    (21) assignment_op -> . ADDASSIGN
    (22) assignment_op -> . SUBASSIGN
    (23) assignment_op -> . DIVASSIGN
    (24) assignment_op -> . MULASSIGN
    =               shift and go to state 23
    ADDASSIGN       shift and go to state 24
    SUBASSIGN       shift and go to state 25
    DIVASSIGN       shift and go to state 26
    MULASSIGN       shift and go to state 27

    assignment_op                  shift and go to state 22

state 7

    (7) instruction -> WHILE . ( condition ) instruction
    (               shift and go to state 28


state 8

    (8) instruction -> IF . ( condition ) instruction ELSE instruction
    (9) instruction -> IF . ( condition ) instruction
    (               shift and go to state 29


state 9

    (10) instruction -> { . instructions }
    (4) instructions -> . instruction instructions
    (5) instructions -> . instruction
    (6) instruction -> . FOR var = range instruction
    (7) instruction -> . WHILE ( condition ) instruction
    (8) instruction -> . IF ( condition ) instruction ELSE instruction
    (9) instruction -> . IF ( condition ) instruction
    (10) instruction -> . { instructions }
    (11) instruction -> . statement ;
    (12) instruction -> . assignment ;
    (68) statement -> . PRINT print_vals
    (69) statement -> . RETURN expression
    (70) statement -> . CONTINUE
    (71) statement -> . BREAK
    (25) assignment -> . vector_element assignment_op expression
    (26) assignment -> . matrix_element assignment_op expression
    (27) assignment -> . var assignment_op expression
    (43) vector_element -> . ID [ INTNUM ]
    (44) matrix_element -> . ID [ INTNUM , INTNUM ]
    (45) var -> . ID
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    {               shift and go to state 9
    PRINT           shift and go to state 12
    RETURN          shift and go to state 13
    CONTINUE        shift and go to state 14
    BREAK           shift and go to state 15
    ID              shift and go to state 18

    instructions                   shift and go to state 30
    instruction                    shift and go to state 4
    var                            shift and go to state 6
    statement                      shift and go to state 10
    assignment                     shift and go to state 11
    vector_element                 shift and go to state 16
    matrix_element                 shift and go to state 17

state 10

    (11) instruction -> statement . ;
    ;               shift and go to state 31


state 11

    (12) instruction -> assignment . ;
    ;               shift and go to state 32


state 12

    (68) statement -> PRINT . print_vals
    (72) print_vals -> . print_val
    (73) print_vals -> . print_vals , print_val
    (74) print_val -> . expression
    (75) print_val -> . string
    (49) expression -> . vector_element
    (50) expression -> . matrix_element
    (51) expression -> . transposition
    (52) expression -> . uminus
    (53) expression -> . matrix_function
    (54) expression -> . matrix
    (55) expression -> . num_expression
    (56) expression -> . expression DOTDIV expression
    (57) expression -> . expression DOTMUL expression
    (58) expression -> . expression DOTSUB expression
    (59) expression -> . expression DOTADD expression
    (60) expression -> . expression / expression
    (61) expression -> . expression * expression
    (62) expression -> . expression - expression
    (63) expression -> . expression + expression
    (48) string -> . STRING
    (43) vector_element -> . ID [ INTNUM ]
    (44) matrix_element -> . ID [ INTNUM , INTNUM ]
    (67) transposition -> . expression '
    (66) uminus -> . - expression
    (28) matrix_function -> . matrix_function_name ( INTNUM )
    (32) matrix -> . [ vectors ]
    (64) num_expression -> . var
    (65) num_expression -> . number
    (29) matrix_function_name -> . ZEROS
    (30) matrix_function_name -> . ONES
    (31) matrix_function_name -> . EYE
    (45) var -> . ID
    (46) number -> . FLOAT
    (47) number -> . INTNUM
    STRING          shift and go to state 45
    ID              shift and go to state 18
    -               shift and go to state 44
    [               shift and go to state 46
    ZEROS           shift and go to state 51
    ONES            shift and go to state 52
    EYE             shift and go to state 53
    FLOAT           shift and go to state 54
    INTNUM          shift and go to state 47

    print_vals                     shift and go to state 33
    print_val                      shift and go to state 34
    expression                     shift and go to state 35
    string                         shift and go to state 36
    vector_element                 shift and go to state 37
    matrix_element                 shift and go to state 38
    transposition                  shift and go to state 39
    uminus                         shift and go to state 40
    matrix_function                shift and go to state 41
    matrix                         shift and go to state 42
    num_expression                 shift and go to state 43
    matrix_function_name           shift and go to state 48
    var                            shift and go to state 49
    number                         shift and go to state 50

state 13

    (69) statement -> RETURN . expression
    (49) expression -> . vector_element
    (50) expression -> . matrix_element
    (51) expression -> . transposition
    (52) expression -> . uminus
    (53) expression -> . matrix_function
    (54) expression -> . matrix
    (55) expression -> . num_expression
    (56) expression -> . expression DOTDIV expression
    (57) expression -> . expression DOTMUL expression
    (58) expression -> . expression DOTSUB expression
    (59) expression -> . expression DOTADD expression
    (60) expression -> . expression / expression
    (61) expression -> . expression * expression
    (62) expression -> . expression - expression
    (63) expression -> . expression + expression
    (43) vector_element -> . ID [ INTNUM ]
    (44) matrix_element -> . ID [ INTNUM , INTNUM ]
    (67) transposition -> . expression '
    (66) uminus -> . - expression
    (28) matrix_function -> . matrix_function_name ( INTNUM )
    (32) matrix -> . [ vectors ]
    (64) num_expression -> . var
    (65) num_expression -> . number
    (29) matrix_function_name -> . ZEROS
    (30) matrix_function_name -> . ONES
    (31) matrix_function_name -> . EYE
    (45) var -> . ID
    (46) number -> . FLOAT
    (47) number -> . INTNUM
    ID              shift and go to state 18
    -               shift and go to state 44
    [               shift and go to state 46
    ZEROS           shift and go to state 51
    ONES            shift and go to state 52
    EYE             shift and go to state 53
    FLOAT           shift and go to state 54
    INTNUM          shift and go to state 47

    expression                     shift and go to state 55
    vector_element                 shift and go to state 37
    matrix_element                 shift and go to state 38
    transposition                  shift and go to state 39
    uminus                         shift and go to state 40
    matrix_function                shift and go to state 41
    matrix                         shift and go to state 42
    num_expression                 shift and go to state 43
    matrix_function_name           shift and go to state 48
    var                            shift and go to state 49
    number                         shift and go to state 50

state 14

    (70) statement -> CONTINUE .
    ;               reduce using rule 70 (statement -> CONTINUE .)


state 15

    (71) statement -> BREAK .
    ;               reduce using rule 71 (statement -> BREAK .)


state 16

    (25) assignment -> vector_element . assignment_op expression
    (20) assignment_op -> . =
    (21) assignment_op -> . ADDASSIGN
    (22) assignment_op -> . SUBASSIGN
    (23) assignment_op -> . DIVASSIGN
    (24) assignment_op -> . MULASSIGN
    =               shift and go to state 23
    ADDASSIGN       shift and go to state 24
    SUBASSIGN       shift and go to state 25
    DIVASSIGN       shift and go to state 26
    MULASSIGN       shift and go to state 27

    assignment_op                  shift and go to state 56

state 17

    (26) assignment -> matrix_element . assignment_op expression
    (20) assignment_op -> . =
    (21) assignment_op -> . ADDASSIGN
    (22) assignment_op -> . SUBASSIGN
    (23) assignment_op -> . DIVASSIGN
    (24) assignment_op -> . MULASSIGN
    =               shift and go to state 23
    ADDASSIGN       shift and go to state 24
    SUBASSIGN       shift and go to state 25
    DIVASSIGN       shift and go to state 26
    MULASSIGN       shift and go to state 27

    assignment_op                  shift and go to state 57

state 18

    (43) vector_element -> ID . [ INTNUM ]
    (44) matrix_element -> ID . [ INTNUM , INTNUM ]
    (45) var -> ID .
    [               shift and go to state 58
    =               reduce using rule 45 (var -> ID .)
    ADDASSIGN       reduce using rule 45 (var -> ID .)
    SUBASSIGN       reduce using rule 45 (var -> ID .)
    DIVASSIGN       reduce using rule 45 (var -> ID .)
    MULASSIGN       reduce using rule 45 (var -> ID .)
    DOTDIV          reduce using rule 45 (var -> ID .)
    DOTMUL          reduce using rule 45 (var -> ID .)
    DOTSUB          reduce using rule 45 (var -> ID .)
    DOTADD          reduce using rule 45 (var -> ID .)
    /               reduce using rule 45 (var -> ID .)
    *               reduce using rule 45 (var -> ID .)
    -               reduce using rule 45 (var -> ID .)
    +               reduce using rule 45 (var -> ID .)
    '               reduce using rule 45 (var -> ID .)
    ,               reduce using rule 45 (var -> ID .)
    ;               reduce using rule 45 (var -> ID .)
    >               reduce using rule 45 (var -> ID .)
    <               reduce using rule 45 (var -> ID .)
    GREATER_EQUAL   reduce using rule 45 (var -> ID .)
    LESS_EQUAL      reduce using rule 45 (var -> ID .)
    NOT_EQUAL       reduce using rule 45 (var -> ID .)
    EQUAL           reduce using rule 45 (var -> ID .)
    :               reduce using rule 45 (var -> ID .)
    )               reduce using rule 45 (var -> ID .)
    FOR             reduce using rule 45 (var -> ID .)
    WHILE           reduce using rule 45 (var -> ID .)
    IF              reduce using rule 45 (var -> ID .)
    {               reduce using rule 45 (var -> ID .)
    PRINT           reduce using rule 45 (var -> ID .)
    RETURN          reduce using rule 45 (var -> ID .)
    CONTINUE        reduce using rule 45 (var -> ID .)
    BREAK           reduce using rule 45 (var -> ID .)
    ID              reduce using rule 45 (var -> ID .)


state 19

    (4) instructions -> instruction instructions .
    $end            reduce using rule 4 (instructions -> instruction instructions .)
    }               reduce using rule 4 (instructions -> instruction instructions .)


state 20

    (6) instruction -> FOR var . = range instruction
    =               shift and go to state 59


state 21

    (45) var -> ID .
    =               reduce using rule 45 (var -> ID .)


state 22

    (27) assignment -> var assignment_op . expression
    (49) expression -> . vector_element
    (50) expression -> . matrix_element
    (51) expression -> . transposition
    (52) expression -> . uminus
    (53) expression -> . matrix_function
    (54) expression -> . matrix
    (55) expression -> . num_expression
    (56) expression -> . expression DOTDIV expression
    (57) expression -> . expression DOTMUL expression
    (58) expression -> . expression DOTSUB expression
    (59) expression -> . expression DOTADD expression
    (60) expression -> . expression / expression
    (61) expression -> . expression * expression
    (62) expression -> . expression - expression
    (63) expression -> . expression + expression
    (43) vector_element -> . ID [ INTNUM ]
    (44) matrix_element -> . ID [ INTNUM , INTNUM ]
    (67) transposition -> . expression '
    (66) uminus -> . - expression
    (28) matrix_function -> . matrix_function_name ( INTNUM )
    (32) matrix -> . [ vectors ]
    (64) num_expression -> . var
    (65) num_expression -> . number
    (29) matrix_function_name -> . ZEROS
    (30) matrix_function_name -> . ONES
    (31) matrix_function_name -> . EYE
    (45) var -> . ID
    (46) number -> . FLOAT
    (47) number -> . INTNUM
    ID              shift and go to state 18
    -               shift and go to state 44
    [               shift and go to state 46
    ZEROS           shift and go to state 51
    ONES            shift and go to state 52
    EYE             shift and go to state 53
    FLOAT           shift and go to state 54
    INTNUM          shift and go to state 47

    var                            shift and go to state 49
    expression                     shift and go to state 60
    vector_element                 shift and go to state 37
    matrix_element                 shift and go to state 38
    transposition                  shift and go to state 39
    uminus                         shift and go to state 40
    matrix_function                shift and go to state 41
    matrix                         shift and go to state 42
    num_expression                 shift and go to state 43
    matrix_function_name           shift and go to state 48
    number                         shift and go to state 50

state 23

    (20) assignment_op -> = .
    ID              reduce using rule 20 (assignment_op -> = .)
    -               reduce using rule 20 (assignment_op -> = .)
    [               reduce using rule 20 (assignment_op -> = .)
    ZEROS           reduce using rule 20 (assignment_op -> = .)
    ONES            reduce using rule 20 (assignment_op -> = .)
    EYE             reduce using rule 20 (assignment_op -> = .)
    FLOAT           reduce using rule 20 (assignment_op -> = .)
    INTNUM          reduce using rule 20 (assignment_op -> = .)


state 24

    (21) assignment_op -> ADDASSIGN .
    ID              reduce using rule 21 (assignment_op -> ADDASSIGN .)
    -               reduce using rule 21 (assignment_op -> ADDASSIGN .)
    [               reduce using rule 21 (assignment_op -> ADDASSIGN .)
    ZEROS           reduce using rule 21 (assignment_op -> ADDASSIGN .)
    ONES            reduce using rule 21 (assignment_op -> ADDASSIGN .)
    EYE             reduce using rule 21 (assignment_op -> ADDASSIGN .)
    FLOAT           reduce using rule 21 (assignment_op -> ADDASSIGN .)
    INTNUM          reduce using rule 21 (assignment_op -> ADDASSIGN .)


state 25

    (22) assignment_op -> SUBASSIGN .
    ID              reduce using rule 22 (assignment_op -> SUBASSIGN .)
    -               reduce using rule 22 (assignment_op -> SUBASSIGN .)
    [               reduce using rule 22 (assignment_op -> SUBASSIGN .)
    ZEROS           reduce using rule 22 (assignment_op -> SUBASSIGN .)
    ONES            reduce using rule 22 (assignment_op -> SUBASSIGN .)
    EYE             reduce using rule 22 (assignment_op -> SUBASSIGN .)
    FLOAT           reduce using rule 22 (assignment_op -> SUBASSIGN .)
    INTNUM          reduce using rule 22 (assignment_op -> SUBASSIGN .)


state 26

    (23) assignment_op -> DIVASSIGN .
    ID              reduce using rule 23 (assignment_op -> DIVASSIGN .)
    -               reduce using rule 23 (assignment_op -> DIVASSIGN .)
    [               reduce using rule 23 (assignment_op -> DIVASSIGN .)
    ZEROS           reduce using rule 23 (assignment_op -> DIVASSIGN .)
    ONES            reduce using rule 23 (assignment_op -> DIVASSIGN .)
    EYE             reduce using rule 23 (assignment_op -> DIVASSIGN .)
    FLOAT           reduce using rule 23 (assignment_op -> DIVASSIGN .)
    INTNUM          reduce using rule 23 (assignment_op -> DIVASSIGN .)


state 27

    (24) assignment_op -> MULASSIGN .
    ID              reduce using rule 24 (assignment_op -> MULASSIGN .)
    -               reduce using rule 24 (assignment_op -> MULASSIGN .)
    [               reduce using rule 24 (assignment_op -> MULASSIGN .)
    ZEROS           reduce using rule 24 (assignment_op -> MULASSIGN .)
    ONES            reduce using rule 24 (assignment_op -> MULASSIGN .)
    EYE             reduce using rule 24 (assignment_op -> MULASSIGN .)
    FLOAT           reduce using rule 24 (assignment_op -> MULASSIGN .)
    INTNUM          reduce using rule 24 (assignment_op -> MULASSIGN .)


state 28

    (7) instruction -> WHILE ( . condition ) instruction
    (14) condition -> . expression > expression
    (15) condition -> . expression < expression
    (16) condition -> . expression GREATER_EQUAL expression
    (17) condition -> . expression LESS_EQUAL expression
    (18) condition -> . expression NOT_EQUAL expression
    (19) condition -> . expression EQUAL expression
    (49) expression -> . vector_element
    (50) expression -> . matrix_element
    (51) expression -> . transposition
    (52) expression -> . uminus
    (53) expression -> . matrix_function
    (54) expression -> . matrix
    (55) expression -> . num_expression
    (56) expression -> . expression DOTDIV expression
    (57) expression -> . expression DOTMUL expression
    (58) expression -> . expression DOTSUB expression
    (59) expression -> . expression DOTADD expression
    (60) expression -> . expression / expression
    (61) expression -> . expression * expression
    (62) expression -> . expression - expression
    (63) expression -> . expression + expression
    (43) vector_element -> . ID [ INTNUM ]
    (44) matrix_element -> . ID [ INTNUM , INTNUM ]
    (67) transposition -> . expression '
    (66) uminus -> . - expression
    (28) matrix_function -> . matrix_function_name ( INTNUM )
    (32) matrix -> . [ vectors ]
    (64) num_expression -> . var
    (65) num_expression -> . number
    (29) matrix_function_name -> . ZEROS
    (30) matrix_function_name -> . ONES
    (31) matrix_function_name -> . EYE
    (45) var -> . ID
    (46) number -> . FLOAT
    (47) number -> . INTNUM
    ID              shift and go to state 18
    -               shift and go to state 44
    [               shift and go to state 46
    ZEROS           shift and go to state 51
    ONES            shift and go to state 52
    EYE             shift and go to state 53
    FLOAT           shift and go to state 54
    INTNUM          shift and go to state 47

    condition                      shift and go to state 61
    expression                     shift and go to state 62
    vector_element                 shift and go to state 37
    matrix_element                 shift and go to state 38
    transposition                  shift and go to state 39
    uminus                         shift and go to state 40
    matrix_function                shift and go to state 41
    matrix                         shift and go to state 42
    num_expression                 shift and go to state 43
    matrix_function_name           shift and go to state 48
    var                            shift and go to state 49
    number                         shift and go to state 50

state 29

    (8) instruction -> IF ( . condition ) instruction ELSE instruction
    (9) instruction -> IF ( . condition ) instruction
    (14) condition -> . expression > expression
    (15) condition -> . expression < expression
    (16) condition -> . expression GREATER_EQUAL expression
    (17) condition -> . expression LESS_EQUAL expression
    (18) condition -> . expression NOT_EQUAL expression
    (19) condition -> . expression EQUAL expression
    (49) expression -> . vector_element
    (50) expression -> . matrix_element
    (51) expression -> . transposition
    (52) expression -> . uminus
    (53) expression -> . matrix_function
    (54) expression -> . matrix
    (55) expression -> . num_expression
    (56) expression -> . expression DOTDIV expression
    (57) expression -> . expression DOTMUL expression
    (58) expression -> . expression DOTSUB expression
    (59) expression -> . expression DOTADD expression
    (60) expression -> . expression / expression
    (61) expression -> . expression * expression
    (62) expression -> . expression - expression
    (63) expression -> . expression + expression
    (43) vector_element -> . ID [ INTNUM ]
    (44) matrix_element -> . ID [ INTNUM , INTNUM ]
    (67) transposition -> . expression '
    (66) uminus -> . - expression
    (28) matrix_function -> . matrix_function_name ( INTNUM )
    (32) matrix -> . [ vectors ]
    (64) num_expression -> . var
    (65) num_expression -> . number
    (29) matrix_function_name -> . ZEROS
    (30) matrix_function_name -> . ONES
    (31) matrix_function_name -> . EYE
    (45) var -> . ID
    (46) number -> . FLOAT
    (47) number -> . INTNUM
    ID              shift and go to state 18
    -               shift and go to state 44
    [               shift and go to state 46
    ZEROS           shift and go to state 51
    ONES            shift and go to state 52
    EYE             shift and go to state 53
    FLOAT           shift and go to state 54
    INTNUM          shift and go to state 47

    condition                      shift and go to state 63
    expression                     shift and go to state 62
    vector_element                 shift and go to state 37
    matrix_element                 shift and go to state 38
    transposition                  shift and go to state 39
    uminus                         shift and go to state 40
    matrix_function                shift and go to state 41
    matrix                         shift and go to state 42
    num_expression                 shift and go to state 43
    matrix_function_name           shift and go to state 48
    var                            shift and go to state 49
    number                         shift and go to state 50

state 30

    (10) instruction -> { instructions . }
    }               shift and go to state 64


state 31

    (11) instruction -> statement ; .
    FOR             reduce using rule 11 (instruction -> statement ; .)
    WHILE           reduce using rule 11 (instruction -> statement ; .)
    IF              reduce using rule 11 (instruction -> statement ; .)
    {               reduce using rule 11 (instruction -> statement ; .)
    PRINT           reduce using rule 11 (instruction -> statement ; .)
    RETURN          reduce using rule 11 (instruction -> statement ; .)
    CONTINUE        reduce using rule 11 (instruction -> statement ; .)
    BREAK           reduce using rule 11 (instruction -> statement ; .)
    ID              reduce using rule 11 (instruction -> statement ; .)
    $end            reduce using rule 11 (instruction -> statement ; .)
    }               reduce using rule 11 (instruction -> statement ; .)
    ELSE            reduce using rule 11 (instruction -> statement ; .)


state 32

    (12) instruction -> assignment ; .
    FOR             reduce using rule 12 (instruction -> assignment ; .)
    WHILE           reduce using rule 12 (instruction -> assignment ; .)
    IF              reduce using rule 12 (instruction -> assignment ; .)
    {               reduce using rule 12 (instruction -> assignment ; .)
    PRINT           reduce using rule 12 (instruction -> assignment ; .)
    RETURN          reduce using rule 12 (instruction -> assignment ; .)
    CONTINUE        reduce using rule 12 (instruction -> assignment ; .)
    BREAK           reduce using rule 12 (instruction -> assignment ; .)
    ID              reduce using rule 12 (instruction -> assignment ; .)
    $end            reduce using rule 12 (instruction -> assignment ; .)
    }               reduce using rule 12 (instruction -> assignment ; .)
    ELSE            reduce using rule 12 (instruction -> assignment ; .)


state 33

    (68) statement -> PRINT print_vals .
    (73) print_vals -> print_vals . , print_val
    ;               reduce using rule 68 (statement -> PRINT print_vals .)
    ,               shift and go to state 65


state 34

    (72) print_vals -> print_val .
    ,               reduce using rule 72 (print_vals -> print_val .)
    ;               reduce using rule 72 (print_vals -> print_val .)


state 35

    (74) print_val -> expression .
    (56) expression -> expression . DOTDIV expression
    (57) expression -> expression . DOTMUL expression
    (58) expression -> expression . DOTSUB expression
    (59) expression -> expression . DOTADD expression
    (60) expression -> expression . / expression
    (61) expression -> expression . * expression
    (62) expression -> expression . - expression
    (63) expression -> expression . + expression
    (67) transposition -> expression . '
    ,               reduce using rule 74 (print_val -> expression .)
    ;               reduce using rule 74 (print_val -> expression .)
    DOTDIV          shift and go to state 66
    DOTMUL          shift and go to state 67
    DOTSUB          shift and go to state 68
    DOTADD          shift and go to state 69
    /               shift and go to state 70
    *               shift and go to state 71
    -               shift and go to state 72
    +               shift and go to state 73
    '               shift and go to state 74


state 36

    (75) print_val -> string .
    ,               reduce using rule 75 (print_val -> string .)
    ;               reduce using rule 75 (print_val -> string .)


state 37

    (49) expression -> vector_element .
    DOTDIV          reduce using rule 49 (expression -> vector_element .)
    DOTMUL          reduce using rule 49 (expression -> vector_element .)
    DOTSUB          reduce using rule 49 (expression -> vector_element .)
    DOTADD          reduce using rule 49 (expression -> vector_element .)
    /               reduce using rule 49 (expression -> vector_element .)
    *               reduce using rule 49 (expression -> vector_element .)
    -               reduce using rule 49 (expression -> vector_element .)
    +               reduce using rule 49 (expression -> vector_element .)
    '               reduce using rule 49 (expression -> vector_element .)
    ,               reduce using rule 49 (expression -> vector_element .)
    ;               reduce using rule 49 (expression -> vector_element .)
    >               reduce using rule 49 (expression -> vector_element .)
    <               reduce using rule 49 (expression -> vector_element .)
    GREATER_EQUAL   reduce using rule 49 (expression -> vector_element .)
    LESS_EQUAL      reduce using rule 49 (expression -> vector_element .)
    NOT_EQUAL       reduce using rule 49 (expression -> vector_element .)
    EQUAL           reduce using rule 49 (expression -> vector_element .)
    :               reduce using rule 49 (expression -> vector_element .)
    )               reduce using rule 49 (expression -> vector_element .)
    FOR             reduce using rule 49 (expression -> vector_element .)
    WHILE           reduce using rule 49 (expression -> vector_element .)
    IF              reduce using rule 49 (expression -> vector_element .)
    {               reduce using rule 49 (expression -> vector_element .)
    PRINT           reduce using rule 49 (expression -> vector_element .)
    RETURN          reduce using rule 49 (expression -> vector_element .)
    CONTINUE        reduce using rule 49 (expression -> vector_element .)
    BREAK           reduce using rule 49 (expression -> vector_element .)
    ID              reduce using rule 49 (expression -> vector_element .)


state 38
